--- a/Codigo/SistemaTutorias/ServiciosSistemaTutorias/ServiciosSistemaTutorias.csproj
+++ b/Codigo/SistemaTutorias/ServiciosSistemaTutorias/ServiciosSistemaTutorias.csproj
@@ -66,7 +66,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mensaje.cs" />
+    <Compile Include="MensajeInicioSesion.cs" />
     <Compile Include="Modelo\ConexionBD.cs" />
     <Compile Include="Modelo\DataClassesSistemaTutorias.designer.cs">
       <AutoGen>True</AutoGen>
