--- a/Codigo/SistemaTutorias/ServiciosSistemaTutorias/bin/ServiciosSistemaTutorias.dll.config
+++ b/Codigo/SistemaTutorias/ServiciosSistemaTutorias/bin/ServiciosSistemaTutorias.dll.config
@@ -37,6 +37,8 @@
    providerName="System.Data.SqlClient" />
   <add name="SistemaTutoriasConnectionString1" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
    providerName="System.Data.SqlClient" />
+  <add name="SistemaTutoriasConnectionString2" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 
 </configuration>
