GUI Casos Uso pt1
Solo falta realizar la GUI de:
CU15: Registrar Fecha de Cierre de Reporte
CU16: Modificar Fecha de Cierre de Reporte
CU17: Registrar Horario Sesión Tutoría
CU09: Consulta Reporte por Tutor
CU22: Consulta Solución a Problemática

--- a/Codigo/SistemaTutorias/ServiciosSistemaTutorias/Web.config
+++ b/Codigo/SistemaTutorias/ServiciosSistemaTutorias/Web.config
@@ -33,11 +33,7 @@
     <directoryBrowse enabled="true"/>
   </system.webServer>
 	<connectionStrings>
-  <add name="SistemaTutoriasConnectionString" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
-   providerName="System.Data.SqlClient" />
-  <add name="SistemaTutoriasConnectionString1" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
-   providerName="System.Data.SqlClient" />
-  <add name="SistemaTutoriasConnectionString2" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
+  <add name="SistemaTutoriasConnectionString" connectionString="Data Source=PC-JAVIER\MSSQLSERVERAP;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=sa;Password=Baloncesto35"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 
