--- a/Codigo/SistemaTutorias/ServiciosSistemaTutorias/bin/ServiciosSistemaTutorias.dll.config
+++ b/Codigo/SistemaTutorias/ServiciosSistemaTutorias/bin/ServiciosSistemaTutorias.dll.config
@@ -33,11 +33,7 @@
     <directoryBrowse enabled="true"/>
   </system.webServer>
 	<connectionStrings>
-  <add name="SistemaTutoriasConnectionString" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
-   providerName="System.Data.SqlClient" />
-  <add name="SistemaTutoriasConnectionString1" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
-   providerName="System.Data.SqlClient" />
-  <add name="SistemaTutoriasConnectionString2" connectionString="Data Source=PC-MARCO\MSSQLTCS;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=dev;Password=Melchor22"
+  <add name="SistemaTutoriasConnectionString" connectionString="Data Source=PC-JAVIER\MSSQLSERVERAP;Initial Catalog=SistemaTutorias;Integrated Security=True;User ID=sa;Password=Baloncesto35"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 
