Avance del Registro de Tutor
Avance del 80% del CU

--- a/Codigo/SistemaTutorias/ServiciosSistemaTutorias/ServiciosSistemaTutorias.csproj
+++ b/Codigo/SistemaTutorias/ServiciosSistemaTutorias/ServiciosSistemaTutorias.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MensajeInicioSesion.cs" />
+    <Compile Include="Modelo\AcademicoDAO.cs" />
     <Compile Include="Modelo\DataClassesSistemaTutorias.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
